# airbnb-price-regression

./: README.md  pyproject.toml
airbnbPriceRegression/humanAttemp/DataLoading/: data_loader.py  utils.py
airbnbPriceRegression/humanAttempt/DataLoading/: data_loader.py
airbnbPriceRegression/humanAttempt/Modelling/: main.py  models.py  phase3.ipynb  visualization.py
airbnbPriceRegression/llmAttemp/: phase2.ipynb
tests/: __init__.py
