[tool.poetry]
name = "airbnbpriceregression"
version = "0.1.0"
description = ""
authors = ["Nagi0 <brunolefonseca13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.23.0"
python-dotenv = "1.0.1"
kagglehub = "^0.3.6"
polars = "1.20.0"
pyarrow = "^19.0.0"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
ipykernel = "^6.29.5"
xgboost = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
